# FastCursor

./: .env.example  .gitignore  README.md  account_manager.py  app.py  browser_utils.py  build.py  build_direct.py  change_account.py  config.py  cursor_auth_manager.py  exchange_token.py  exit_cursor.py  fastcursor_gui.py  icon.icns  logger.py  register_account.py  requirements.txt  reset_machine_v2.py  scheduler.py  utils.py
cursor-helper/: package.json  pnpm-lock.yaml
cursor-helper/src/: App.vue
cursor-helper/src-tauri/: Cargo.toml  tauri.conf.json
cursor-helper/src-tauri/icons/: icon.icns
cursor-helper/src-tauri/src/: cursor_auth.rs  lib.rs  main.rs  process.rs  reset_machine.rs
cursor-helper/src/components/: Toast.vue
static/css/: style.css
static/js/: main.js
templates/: index.html
